--- a/MovilParaiso/app/src/main/AndroidManifest.xml
+++ b/MovilParaiso/app/src/main/AndroidManifest.xml
@@ -9,8 +9,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".ListAtractivos"></activity>
         <activity android:name=".Menu" />
-        <activity android:name=".Login" android:parentActivityName=".MainActivity"/>
+        <activity
+            android:name=".Login"
+            android:parentActivityName=".MainActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
